Hero and Portfolio Sections Completed

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="css/all.min.css">
     </head>
     <body>
+        <!-- Main Navigation bar Start -->
         <header>
             <div class="container">
                 <a href="#" class="logo"><img src="images/logo.png" alt="Logo of the web site"></a>
@@ -32,6 +33,41 @@
                 </nav>
             </div>
         </header>
+        <!-- Main Navigation bar End -->
+
+        <!-- Hero Section Start-->
+        <section class="hero">
+            <div class="container">
+                <h1>
+                    Hello There
+                </h1>
+                <p>We are Leon - Super Creative &amp;<br>Minimal Agency Web Template</p>
+            </div>
+        </section>
+        <!-- Hero Section End -->
+
+        <!-- Portfolio Section Start -->
+        <section class="portfolio">
+            <div class="container">
+                <div class="box">
+                    <i class="fas fa-magic fa-3x"></i>
+                    <h3>Tell us Your Idea</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos labore cum quas culpa odit natus eum officia possimus ipsum inventore</p>
+                </div>
+                <div class="box">
+                    <i class="far fa-gem fa-3x"></i>
+                    <h3>We Will Do All The Work</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos labore cum quas culpa odit natus eum officia possimus ipsum inventore</p>
+                </div>
+                <div class="box">
+                    <i class="fa-solid fa-earth-africa"></i>
+                    <h3>Your Product Is WorldWide</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos labore cum quas culpa odit natus eum officia possimus ipsum inventore</p>
+                </div>
+            </div>
+        </section>
+        <!-- Portfolio Section End -->
+
         <!-- JS code for toggling menu on small screens Start-->
         <script>
             const openMenuBtn = document.getElementById("mobile-menu-btn");
