--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         </section>
         <!-- Hero Section End -->
 
-        <!-- Portfolio Section Start -->
-        <section class="portfolio">
+        <!-- Presentation Section Start -->
+        <section class="presentation with-padding with-bg">
             <div class="container">
                 <div class="box">
                     <i class="fas fa-magic fa-3x"></i>
@@ -66,8 +66,122 @@
                 </div>
             </div>
         </section>
+        <!-- Presentation Section End -->
+
+        <!-- Services Section Start -->
+        <section class="services with-padding">
+            <div class="section-heading">
+                <h2>Services</h2>
+                <p>Don't be Busy, be productive</p>
+            </div>
+            <div class="container">
+                <div class="box">
+                    <i class="fas fa-palette fa-2x"></i>
+                    <h3>Graphic Design</h3>
+                    <p>Graphic design is the process of visual communication and problem-solving using one or more of typography, photography and illustration.</p>
+                </div>
+                <div class="box">
+                    <i class="fab fa-sketch fa-2x"></i>
+                    <h3>UI & UX</h3>
+                    <p>Process of enhancing user satisfaction with a product by improving the usability, accessibility, and pleasure provided in the interaction.</p>                
+                </div>
+                <div class="box">
+                    <i class="fas fa-vector-square fa-2x"></i>
+                    <h3>Web Design</h3>
+                    <p>Web design encompasses many different skills and disciplines in the production and maintenance of websites.</p>                
+                </div>
+                <div class="box">
+                    <i class="fas fa-pencil-ruler fa-2x"></i>
+                    <h3>Web Development</h3>
+                    <p>Web development is a broad term for the work involved in developing a web site for the Internet or an intranet.</p>                
+                </div>
+                <div class="illustration">
+                    <img src="images/services.jpg" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- Services Section End -->
+        <!-- Portfolio Section Start -->
+        <section class="portfolio with-padding with-bg">
+            <div class="section-heading">
+                <h2>Portfolio</h2>
+                <p>If you do it right, it will last forever.</p>
+            </div>
+            <div class="container">
+                <div class="box">
+                    <img src="images/portfolio-1.jpg" alt="">
+                    <div class="content">
+                        <h3>Project Here</h3>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="images/portfolio-2.jpg" alt="">
+                    <div class="content">
+                        <h3>Project Here</h3>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="images/portfolio-3.jpg" alt="">
+                    <div class="content">
+                        <h3>Project Here</h3>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Portfolio Section End -->
 
+        <!-- About Section Start -->
+        <section class="about with-padding">
+            <div class="section-heading">
+                <h2>About</h2>
+                <p>Less is more work</p>
+            </div>
+            <div class="container">
+                <div class="image">
+                    <img src="images/about.jpg" alt="">
+                </div>
+                <div class="desc">
+                    <div class="first-p">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nemo neque voluptate tempora velit cum non, fuga vitae architecto delectus sed maxime rerum impedit aliquam obcaecati, aut excepturi iusto laudantium!</p>
+                    </div>
+                    <hr>
+                    <div class="second-p">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, sapiente. Velit iure exercitationem dolores nesciunt dolore. Eum officiis dolorum hic voluptate quaerat minima, similique inventore esse, alias, sed quo officia?</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- About Section End -->
+
+        <!-- Contact Section Start -->
+        <section class="contact with-padding with-bg">
+            <div class="section-heading">
+                <h2>Contact</h2>
+                <p>We are born to create</p>
+            </div>
+            <div class="container">
+                <p>Feel free to drop us a line at:</p>
+                <p>leoagency@mail.com</p>
+                <div class="social">
+                    <span>Find Us On Social Networks</span>
+                    <i class="fab fa-youtube"></i>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                </div>
+            </div>
+        </section>
+        <!-- Contact Section End -->
+
+        <!-- Footer Start -->
+        <footer>
+            <div class="container">
+                <p>&copy; 2022 <span>Leon</span> All Right Reserved</p>
+            </div>
+        </footer>
+        <!-- Footer End -->
         <!-- JS code for toggling menu on small screens Start-->
         <script>
             const openMenuBtn = document.getElementById("mobile-menu-btn");
