adding links to the sections of the web page

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <nav>
                     <div id="close-mobile-menu" class="close-smallScreen-menu"></div>
                     <ul>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#srv">Services</a></li>
+                        <li><a href="#prt">Portfolio</a></li>
+                        <li><a href="#abt">About</a></li>
+                        <li><a href="#cnt">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -69,7 +69,7 @@
         <!-- Presentation Section End -->
 
         <!-- Services Section Start -->
-        <section class="services with-padding">
+        <section id="srv" class="services with-padding">
             <div class="section-heading">
                 <h2>Services</h2>
                 <p>Don't be Busy, be productive</p>
@@ -102,7 +102,7 @@
         </section>
         <!-- Services Section End -->
         <!-- Portfolio Section Start -->
-        <section class="portfolio with-padding with-bg">
+        <section id="prt" class="portfolio with-padding with-bg">
             <div class="section-heading">
                 <h2>Portfolio</h2>
                 <p>If you do it right, it will last forever.</p>
@@ -134,7 +134,7 @@
         <!-- Portfolio Section End -->
 
         <!-- About Section Start -->
-        <section class="about with-padding">
+        <section id="abt" class="about with-padding">
             <div class="section-heading">
                 <h2>About</h2>
                 <p>Less is more work</p>
@@ -157,7 +157,7 @@
         <!-- About Section End -->
 
         <!-- Contact Section Start -->
-        <section class="contact with-padding with-bg">
+        <section id="cnt" class="contact with-padding with-bg">
             <div class="section-heading">
                 <h2>Contact</h2>
                 <p>We are born to create</p>
